--- a/css/cards.css
+++ b/css/cards.css
@@ -1,7 +1,7 @@
 .question_card {
   position: relative;
-  width: 400px;
-  height: 150px;
+  width: 30vw;
+  height: 25vh;
   background-color: var(--primary-color);
   color: black;
   box-shadow: 5px 5px var(--side-color);
@@ -10,6 +10,7 @@
   text-align: center;
   padding: 40px;
   margin: 40px;
+  word-wrap: break-word;
 }
 
 .question_card > button {
@@ -46,10 +47,13 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
+  max-width: 30vw;
 }
 
-.hashtags button {
+.hashtags span {
+  font-size: 16px;
   margin: 3px;
+  padding: 0px 5px;
   border-radius: 6px;
   background-color: var(--side-color);
   border: none;
